// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioInputField> should render correctly when is disabled 1`] = `
.c0 {
  position: absolute;
  opacity: 0;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c0[aria-disabled='true'] {
  cursor: not-allowed;
}

<input
  className="c0"
  disabled={true}
/>
`;

exports[`<RadioInputField> should render correctly with default props 1`] = `
.c0 {
  position: absolute;
  opacity: 0;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c0[aria-disabled='true'] {
  cursor: not-allowed;
}

<input
  className="c0"
/>
`;
